Project based on Angular.dart.tutorial Chapter 6. Now works with angular 0.10.0

--- a/web/view/addRecipe.html
+++ b/web/view/addRecipe.html
@@ -1,4 +1,4 @@
-<div ng-bind-route="recipe">
-  <add-recipe recipe-map="ctrl.recipeMap" categories="ctrl.categories">
+<div>
+  <add-recipe recipe-map="ctrl.recipeMap" categories="ctrl.categories" all-recipes="ctrl.allRecipes">
   </add-recipe>
 </div>
