--- a/web/view/editRecipe.html
+++ b/web/view/editRecipe.html
@@ -1,4 +1,4 @@
-<div ng-bind-route="recipe">
+<div>
   <edit-recipe recipe-map="ctrl.recipeMap" categories="ctrl.categories">
   </edit-recipe>
 </div>
